fix(style): resolve responsive on mobile

--- a/src/assets/stylesheets/partials/layout/_containers.scss
+++ b/src/assets/stylesheets/partials/layout/_containers.scss
@@ -6,25 +6,30 @@ $grid: $global-grid;
 }
 
 main {
-  height: 100vh;
+  height: calc(var(--vh) * 100);
 }
 
 .main-layout {
   display: grid;
-  height: 100vh;
-  max-height: 100vh;
+  height: calc(var(--vh) * 100);
+  max-height: calc(var(--vh) * 100);
   grid-template-columns: 0.1fr 3fr 1fr;
   grid-template-areas: "header main sidebar";
 
   @include bp($tablet, max) {
     grid-template-areas:
       "main sidebar"
+      "main sidebar"
       "header header";
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 120px;
 
     .main-page-content {
       margin: 1rem;
+
+      @include bp($small, max) {
+        margin: 0;
+      }
     }
 
     .main-nav,
@@ -80,26 +85,85 @@ main {
 
 .main-game-layout {
   display: grid;
-  height: 100vh;
-  max-height: 100vh;
+  height: calc(var(--vh) * 100);
+  max-height: calc(var(--vh) * 100);
   grid-template-columns: 0.1fr 2fr;
   grid-template-areas: "header main";
 
+  @include bp($small, max) {
+    grid-template-areas:
+      "main"
+      "header";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 100px;
+  }
+
   .main-page-content {
     margin-right: 1rem;
+
+    @include bp($small, max) {
+      margin: 0;
+    }
+  }
+
+  .main-header {
+    @include bp($small, max) {
+      flex-direction: row;
+    }
+  }
+
+  .main-nav {
+    @include bp($small, max) {
+      flex-direction: row;
+
+      &--login {
+        display: none;
+      }
+
+      &--link {
+        justify-content: space-around;
+        align-content: center;
+        width: 100%;
+      }
+
+      &--settings {
+        display: none;
+      }
+
+      .link {
+        margin-bottom: 0;
+      }
+    }
   }
 
 }
 
 .main-basic-layout {
   display: grid;
-  height: 100vh;
-  max-height: 100vh;
+  height: calc(var(--vh) * 100);
+  max-height: calc(var(--vh)* 100);
   grid-template-columns: 0.1fr 2fr;
   grid-template-areas: "header main";
 
+  @include bp($small, max) {
+    grid-template-areas:
+      "main";
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+
   .main-page-content {
     margin-right: 1rem;
+
+    @include bp($small, max) {
+      margin: 0;
+    }
+  }
+
+  .main-header {
+    @include bp($small, max) {
+      display: none;
+    }
   }
 }
 
@@ -116,8 +180,13 @@ main {
   border-radius: var(--radius);
   box-shadow: var(--shadow);
 
-  @include bp($tablet, max) {
+  @include bp($small, max) {
     margin-top: 0;
+  }
+
+  @include bp($small, max) {
+    margin: 0.5rem;
+    padding: 0.5rem;
   }
 }
 
@@ -131,6 +200,10 @@ main {
   border-radius: var(--radius);
   box-shadow: var(--shadow);
 
+  @include bp($small, max) {
+    border-radius: 0 0 var(--radius) var(--radius);
+  }
+
   .layout-container {
     display: flex;
     flex-direction: column;
@@ -142,16 +215,17 @@ main {
   }
 
   .head {
-    height: calc(25vh - (var(--spacing) * 2));
-    max-height: calc(25vh - (var(--spacing) * 2));
+    height: calc((var(--vh) * 25) - (var(--spacing) * 2));
+    max-height: calc((var(--vh) * 25) - (var(--spacing) * 2));
     position: relative;
     background-color: var(--border-color);
     border-top-right-radius: var(--radius);
     border-top-left-radius: var(--radius);
 
     @include bp($small, max) {
-      max-height: calc(20vh - (var(--spacing) * 2));
-      height: calc(20vh - (var(--spacing) * 2));
+      max-height: calc((var(--vh) * 20) - (var(--spacing) * 2));
+      height: calc((var(--vh) * 20) - (var(--spacing) * 2));
+      border-radius: 0;
     }
 
     .title {
@@ -192,17 +266,16 @@ main {
   }
 
   .content-wrapper {
-    max-height: 75vh;
-    height: 75vh;
+    max-height: calc(var(--vh) * 75);
+    height: calc(var(--vh) * 75);
     overflow-y: scroll;
     padding: var(--spacing);
     border-bottom-right-radius: var(--radius);
     border-bottom-left-radius: var(--radius);
-    //scrollbar-width: none;
 
     @include bp($small, max) {
-      max-height: 70vh;
-      height: 70vh;
+      max-height: calc(var(--vh) * 70);
+      height: calc(var(--vh) * 70);
     }
   }
 }
@@ -214,9 +287,24 @@ main {
   align-content: center;
   align-items: center;
   flex-direction: column;
-  //background-color: var(--secondary-color);
-  //border-radius: $radius;
-  //box-shadow: $shadow;
+}
+
+.main-nav {
+  .link {
+    &.menu {
+      display: none;
+    }
+
+    @include bp($small, max) {
+      &.users-all {
+        display: none;
+      }
+
+      &.menu {
+        display: block;
+      }
+    }
+  }
 }
 
 .row {
